--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
         
         <label for="numPredators">Predators:</label>
         <input type="number" id="numPredators" value="10">
-        
+        <br>
+        <br>
         <button id="restartGame" onclick="restartGame()">Restart Game</button>
         <button class="infoButtons" onclick="togglePredatorInfo()">Predator Info</button>
         <button class="infoButtons" onclick="togglePreyInfo()">Prey Info</button>
+        <button class="killButtons" onclick="activatePreySweep()">Kill All Preys</button>
+        <button class="killButtons" onclick="activatePredatorSweep()">Kill All Predators</button>
+        <button class="spawnButtons" id="spawnPreyButton" onclick="togglePreySpawningMode()">Spawn Preys</button>
+        <button class="spawnButtons" id="spawnPredatorButton" onclick="togglePredatorSpawningMode()">Spawn Predators</button>
         <!-- <button class="utilityButtons" onclick="toggleAudio()">Toggle Sound Effects</button> -->
         <br>
         <!-- create a Sim Speed slider from 0.5 to 2, with increment of 0.1 -->
-        <!-- use changeSimulationSpeed() -->
-        <br
+        <br>
         <label for="simSpeed">Sim Speed:</label>
         <input type="range" id="simSpeed" min="0.5" max="2" step="0.1" value="1" oninput="changeSimulationSpeed()">
         <!-- add a number showing the slider number controlled by a function -->
