Clarified instructions, increased prey spawning speed

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <button class="infoButtons" onclick="togglePreyInfo()">Prey Info</button>
         <button class="killButtons" onclick="activatePreySweep()">Kill All Preys</button>
         <button class="killButtons" onclick="activatePredatorSweep()">Kill All Predators</button>
-        <button class="spawnButtons" id="spawnPreyButton" onclick="togglePreySpawningMode()">Spawn Preys</button>
-        <button class="spawnButtons" id="spawnPredatorButton" onclick="togglePredatorSpawningMode()">Spawn Predators</button>
+        
+        <button class="spawnButtons" id="spawnPreyButton" onclick="togglePreySpawningMode()">Placing Preys on Canvas</button>
+        <button class="spawnButtons" id="spawnPredatorButton" onclick="togglePredatorSpawningMode()">Placing Predators on Canvas</button>
         <!-- <button class="utilityButtons" onclick="toggleAudio()">Toggle Sound Effects</button> -->
         <br>
         <!-- create a Sim Speed slider from 0.5 to 2, with increment of 0.1 -->
